# vpc-lattice-demo

./: .eslintignore  .gitignore  README.md  _redirects  cdk.context.json.template  cdk.json  deploy.mjs  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
assets/: DrawingControls-9bbc6150.js  DrawingLayer-de0ee636.js  NoteDisplay-6636ec4f.js  NotesView-30c5d378.js  Presenter-805a293c.js  PresenterPrint-0899025a.js  index-489fcf03.css  index-ff20872f.js
client/: request.py
lib/: config.ts  demo-client-stack.ts  service-stack.ts
lib/cart-service/: Dockerfile  cart-service-stack.ts  cart.py  cart_item_api.py  cart_item_handler.py  cart_item_model.py  ecs-api.ts  pyproject.toml  recs.py  requirements.txt
lib/constructs/: service-connectivity.ts
lib/net/: central-net-stack.ts  service-account-base-net-stack.ts
lib/recommendation-service/: recommendation-service-stack.ts  recommendation_handler.py  recommender.py
slides/: package-lock.json  package.json  slides.md
