[tool.poetry]
name = "ecs-api"
version = "0.1.0"
description = "Cart service API"
authors = ["fourTheorem"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "<2.0"
botocore = "^1.29.165"
requests = "^2.31.0"
aws-xray-sdk = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
